# luisk-genai-labs

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: FUNDING.yml
labs/agent-function-calling/: README.md  cdk.json  package.json
labs/agent-function-calling/assets/: agent.eraser.io  architecture.eraser.io  flow-chart.eraser.io
labs/agent-function-calling/src/: index.ts  stack.ts
labs/agent-function-calling/src/lambda/: Cargo.toml
labs/agent-function-calling/src/lambda/agent-caller/: Cargo.toml
labs/agent-function-calling/src/lambda/agent-caller/src/: main.rs  types.rs
labs/agent-function-calling/src/lambda/ice-cream-maker/: Cargo.toml
labs/agent-function-calling/src/lambda/ice-cream-maker/src/: main.rs  types.rs
labs/agent-function-calling/src/lambda/waiter/: Cargo.toml
labs/agent-function-calling/src/lambda/waiter/schemas/: waiter.yaml
labs/agent-function-calling/src/lambda/waiter/src/: main.rs  types.rs
labs/stub-lab/: package.json  tsconfig.json
labs/stub-lab/src/: index.ts  stack.ts
labs/stub-lab/src/lambda/stub-lambda/src/: main.rs
labs/websocket-ai-chat/: package.json
labs/websocket-ai-chat/src/: index.ts  stack.ts
labs/websocket-ai-chat/src/client/: Cargo.toml  index.html
labs/websocket-ai-chat/src/client/src/: main.rs
labs/websocket-ai-chat/src/lambda/stub-lambda/: Cargo.toml
labs/websocket-ai-chat/src/lambda/stub-lambda/src/: main.rs
labs/websocket-ai-translation/: README.md  package.json
labs/websocket-ai-translation/src/: index.ts  stack.ts
labs/websocket-ai-translation/src/lambda/stub-lambda/src/: event_handler.rs
labs/zero-shot-chat-with-document/: README.md  eraser.io  package.json
labs/zero-shot-chat-with-document/src/: stack.ts
labs/zero-shot-chat-with-document/src/lambda/zero-shot-chat-with-document/: Cargo.toml
labs/zero-shot-chat-with-document/src/lambda/zero-shot-chat-with-document/src/: main.rs
