[workspace]
resolver = "2"
members = ["ice-cream-maker", "waiter", "agent-caller"]

[workspace.package]
version = "1.0.0"
authors = ["Luis Carlos Osorio Jayk"]
edition = "2021"
description = "Lambda functions used for IceCream shop agents. This showcases how to add function calling to agents in AWS Bedrock."

[workspace.dependencies]
aws-sdk-dynamodb = "1.58.0"
aws-config = "1.5.13"
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = "0.3.19"
serde = "1.0.217"
serde_json = "1.0.134"