[package]
name = "agent-caller"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-sdk-bedrockagentruntime = "1.68.0"
