[package]
name = "zero-shot-chat-with-document"
version = "0.1.0"
edition = "2021"
authors = ["Luis Carlos Osorio Jayk"]

[dependencies]
aws-config = "1.5.12"
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["s3"] }
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = "0.3.19"
serde = "1.0.217"
serde_json = "1.0.134"
aws-sdk-bedrockagentruntime = "1.68.0"
